# rax

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
src/: modeling.rs
