[package]
edition = "2021"
name = "llama-dfdx"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.5", features = ["derive"]}
dfdx = {version = "0.13.0", path = "../dfdx/dfdx", default-features = false, features = ["std", "fast-alloc", "f16"]}
json = "0.12.4"
memmap2 = "0.5.10"
rand = {version = "0.8.5", default-features = false, features = ["std_rng"]}
rust_tokenizers = "8.1.0"

[features]
cpu = ["dfdx/cpu"]
cuda = ["dfdx/cuda"]
default = ["cpu"]
